--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+@import url("https://fonts.googleapis.com/css2?family=Fira+Sans+Extra+Condensed:wght@500&display=swap");
 * {
   margin: 0px;
   padding: 0px;
@@ -43,7 +44,7 @@ nav {
 }
 
 .nav-container {
-  box-shadow: 0px 0px 10px 0px rgb(0 0 0 / 50%);
+  box-shadow: 0px 0px 1px 0px rgb(0 0 0 / 50%);
   transition: background 0.3s, border 0.3s, border-radius 0.3s, box-shadow 0.3s;
   padding: 010px 0px 010px 0px;
 }
@@ -51,8 +52,9 @@ nav {
 .logo-link {
   text-decoration: none;
   color: black;
-  font-size: 30px;
-  font-family: "Alfa Slab One", cursive;
+  font-size: 40px;
+  font-family: "Fira Sans Extra Condensed", sans-serif;
+  font-weight: 500;
   margin-left: 30px;
 }
 
@@ -71,29 +73,32 @@ nav {
 
 .presentation {
   display: block;
-  width: 50%;
+  width: 40%;
   margin: auto;
   min-height: 80vh;
 }
 
+.cover-container {
+  /* width: 80%;
+  height: 40vh; */
+}
+
 .cover {
+  height: 40vh;
   flex: 1;
   display: flex;
   justify-content: center;
-  height: 50vh;
+  object-fit: scale-down;
 }
 .cover img {
-  width: 60%;
+  object-fit: scale-down;
+  width: 100%;
   height: 100%;
-  border-radius: 2px;
-  filter: drop-shadow(0px 2px 3px rgb(70, 69, 69));
 }
 
 .intro {
-  padding: 5px;
-  background-color: rgb(226, 228, 229);
   display: block;
-  width: 90%;
+  width: 100%;
   margin: auto;
   min-height: 80vh;
 }
@@ -108,10 +113,9 @@ nav {
   width: 100%;
 }
 .intro-cover img {
-  width: 95%;
+  width: 100%;
   height: 90%;
   border-radius: 2px;
-  filter: drop-shadow(0px 2px 3px rgb(70, 69, 69));
 }
 
 .intro p {
@@ -151,7 +155,7 @@ nav {
   min-height: 80vh;
 }
 
-footer @media screen and (max-width: 1024px) {
+@media screen and (max-width: 1024px) {
   body {
     padding-top: 65px;
   }
